# KgLog

./: CMakeLists.txt  main.cpp
src/: KgLog.cpp  KgLog.h  _KString.h  __general.h  main.cpp
